feat: add swagger api description
